--- a/playlist-app/templates/playlist.html
+++ b/playlist-app/templates/playlist.html
@@ -7,13 +7,17 @@
   {% if playlist.description %}
   <p class="lead">{{ playlist.description }}</p>
   {% endif %}
+  <div class="text-danger">
+    {% if playlist.songs %}
+    {% for song in playlist.songs %}
+    <p>
+      <b>{{song.title}}</b>
+      <small>{{song.artist}}</small>
+    </p>
+    {% endfor %}
+    {% endif %}
+  </div>
 </div>
-
-
-<div class="text-danger">
-  SHOW ALL OF THE SONGS IN THIS PLAYLIST HERE
-</div>
-
 <p>
   <a class="btn btn-primary" href="/playlists/{{ playlist.id }}/add-song">
     Add Song To Playlist
