--- a/playlist-app/templates/add_song_to_playlist.html
+++ b/playlist-app/templates/add_song_to_playlist.html
@@ -3,7 +3,24 @@
 {% block content %}
 
 <h1>Add a song to {{ playlist.name }}</h1>
+<form id="playlist-song-add-form" method="POST">
+    {{ form.hidden_tag() }}
 
-<h1>Add a form that when submitted adds a song to this playlist!</h1>
+    {% for field in form
+    if field.widget.input_type != 'hidden' %}
+
+    <p>
+        {{ field.label }}
+        {{ field }}
+
+        {% for error in field.errors %}
+        {{ error }}
+        {% endfor %}
+    </p>
+
+    {% endfor %}
+
+    <button type="submit">Submit</button>
+</form>
 
 {% endblock %}
