--- a/playlist-app/templates/new_playlist.html
+++ b/playlist-app/templates/new_playlist.html
@@ -1,7 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1>Add new playlist!</h1>
+<form id="playlist-form" method="POST">
+    {{ form.hidden_tag() }}
 
-<h1>Add a form that when submitted creates a new playlist!</h1>
+    {% for field in form if field.widget.input_type != 'hidden' %}
+    <p>
+        {{ field.label }}
+        {{ field }}
+
+        {% for error in field.errors %}
+        {{ error }}
+        {% endfor %}
+    </p>
+
+    {% endfor %}
+
+    <button type="submit">Submit</button>
+</form>
 
 {% endblock %}
